translatable/tests/integration/translation/templates/fail_invalid_ident.stderr
error: expected identifier
 --> tests/integration/translation/templates/fail_invalid_ident.rs:5:52
  |
5 |     translation!("es", static greetings::informal, %%$invalid = $ident);
  |                                                    ^
